# Lattice_Points_Grapher

./: .gitignore  README.md  app.py  lattice-triangle.spec  pyproject.toml
docs/: index.html  script.js  style.css
docs/js/: constants.js  geometry.js  induction.js  katex-utils.js  main.js  pyodide-loader.js  render.js  sidebar.js  state.js
docs/py/: geometry.py
lattice_triangle/: __init__.py  geometry.py  grid_view.py  main_window.py  stats_panel.py
lattice_triangle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_geometry.py
web/: README.md  index.html  script.js  style.css
