[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-triangle"
version = "0.1.0"
description = "Interactive lattice point triangle visualizer built with PySide6."
authors = [{ name = "Boundary Points" }]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
]

[project.scripts]
lattice-triangle = "app:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]
ignore = [
    "E203", # Whitespace before ':'
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
